--- a/angular/projects/admin/src/app/demographics/custom-configurations-record-demographics.component.html
+++ b/angular/projects/admin/src/app/demographics/custom-configurations-record-demographics.component.html
@@ -10,6 +10,5 @@
   draftXsd="dCustom_v3.xsd"
   draftSchemaRootElementName="dCustomConfiguration"
   [draftCustomConfiguration]="agency.draftVersion?.demCustomConfiguration"
-  [defaultValues]="defaultValues"
->
+  [defaultValues]="defaultValues">
 </shared-xsd-record>
