--- a/angular/projects/admin/src/app/demographics/forms/edit-form-demographics.component.html
+++ b/angular/projects/admin/src/app/demographics/forms/edit-form-demographics.component.html
@@ -10,8 +10,7 @@
     [transformRecord]="onSubmit"
     (update)="onUpdate()"
     deleteLabel="Archive"
-    class="col-md-6"
-  >
+    class="col-md-6">
     <ng-template let-record="record" let-error="error">
       <admin-demographics-form [record]="record" [error]="error"></admin-demographics-form>
     </ng-template>
