--- a/angular/projects/admin/src/app/demographics/personnel-bulk-invite-demographics.component.html
+++ b/angular/projects/admin/src/app/demographics/personnel-bulk-invite-demographics.component.html
@@ -5,8 +5,7 @@
   i18n-dismissLabel
   dismissLabel="Close"
   (confirm)="onSendInvitations()"
-  [disabled]="isLoading || isPolling"
->
+  [disabled]="isLoading || isPolling">
   <div class="modal-body">
     <shared-loader *ngIf="isLoading"></shared-loader>
     <ng-container *ngIf="!isLoading">
