--- a/angular/projects/admin/src/app/demographics/vehicles-record-demographics.component.html
+++ b/angular/projects/admin/src/app/demographics/vehicles-record-demographics.component.html
@@ -8,6 +8,5 @@
   [draftNemsisVersion]="agency.draftVersion?.nemsisVersion"
   draftXsd="dVehicle_v3.xsd"
   [draftCustomConfiguration]="agency.draftVersion?.demCustomConfiguration"
-  [defaultValues]="defaultValues"
->
+  [defaultValues]="defaultValues">
 </shared-xsd-record>
