--- a/angular/projects/admin/src/app/psaps/new-psap-dispatcher.component.html
+++ b/angular/projects/admin/src/app/psaps/new-psap-dispatcher.component.html
@@ -14,8 +14,7 @@
         [resultTemplate]="rt"
         [source]="record"
         [target]="record"
-        [error]="error"
-      ></shared-search-field>
+        [error]="error"></shared-search-field>
     </div>
     <div class="mb-3">
       <shared-text-field id="callSign" label="Call Sign" [source]="record" [target]="record" [error]="error"></shared-text-field>
