--- a/angular/projects/admin/src/app/states/edit-state.component.html
+++ b/angular/projects/admin/src/app/states/edit-state.component.html
@@ -12,8 +12,7 @@
         name="isConfigured"
         [source]="state"
         [target]="state"
-        (valueChange)="onSignupsEnabledChange($event)"
-      ></shared-checkbox>
+        (valueChange)="onSignupsEnabledChange($event)"></shared-checkbox>
     </div>
     <h4>NEMSIS</h4>
     <div class="mb-3">
