--- a/angular/projects/admin/src/app/users/new-user.component.html
+++ b/angular/projects/admin/src/app/users/new-user.component.html
@@ -22,8 +22,7 @@
         label="Password"
         [source]="record"
         [target]="record"
-        [error]="error"
-      ></shared-text-field>
+        [error]="error"></shared-text-field>
     </div>
   </ng-template>
 </shared-form>
