--- a/angular/projects/auth/src/app/login.component.html
+++ b/angular/projects/auth/src/app/login.component.html
@@ -7,8 +7,7 @@
         placeholder="jane@firedepartment.gov"
         [source]="data"
         [target]="data"
-        [error]="error"
-      ></shared-text-field>
+        [error]="error"></shared-text-field>
     </div>
     <div class="mb-5">
       <shared-text-field
@@ -18,8 +17,7 @@
         type="password"
         [source]="data"
         [target]="data"
-        [error]="error"
-      ></shared-text-field>
+        [error]="error"></shared-text-field>
     </div>
     <div class="d-flex flex-column align-items-center">
       <button type="submit" [disabled]="!isValid" class="btn btn--primary w-50 mb-3">Sign In</button>
