--- a/angular/projects/shared/src/lib/components/fields/checkbox.component.html
+++ b/angular/projects/shared/src/lib/components/fields/checkbox.component.html
@@ -6,7 +6,6 @@
     type="checkbox"
     [id]="derivedId"
     [name]="derivedName"
-    [(ngModel)]="value"
-  />
+    [(ngModel)]="value" />
   <label class="form-check-label" [for]="derivedId">{{ label }}</label>
 </div>
