--- a/angular/projects/shared/src/lib/components/xsd/elements/inputs/xsd-element-input-city.component.html
+++ b/angular/projects/shared/src/lib/components/xsd/elements/inputs/xsd-element-input-city.component.html
@@ -14,6 +14,5 @@
     [(ngModel)]="value"
     type="text"
     class="form-control"
-    [class.is-invalid]="isInvalid"
-  />
+    [class.is-invalid]="isInvalid" />
 </ng-container>
