--- a/angular/projects/shared/src/lib/components/xsd/elements/xsd-element-input.component.html
+++ b/angular/projects/shared/src/lib/components/xsd/elements/xsd-element-input.component.html
@@ -11,8 +11,7 @@
     [error]="error"
     [index]="index"
     [selectedValue]="selectedValue"
-    [displayOnly]="displayOnly"
-  >
+    [displayOnly]="displayOnly">
   </shared-xsd-element-input-city>
   <shared-xsd-element-input-county
     class="d-flex"
@@ -26,8 +25,7 @@
     [error]="error"
     [index]="index"
     [selectedValue]="selectedValue"
-    [displayOnly]="displayOnly"
-  >
+    [displayOnly]="displayOnly">
   </shared-xsd-element-input-county>
   <shared-xsd-input
     class="d-flex"
@@ -41,8 +39,7 @@
     [error]="error"
     [index]="index"
     [selectedValue]="selectedValue"
-    [displayOnly]="displayOnly"
-  >
+    [displayOnly]="displayOnly">
   </shared-xsd-input>
   <shared-xsd-select
     *ngSwitchCase="COMPONENT_TYPES.select"
@@ -55,8 +52,7 @@
     [error]="error"
     [index]="index"
     [selectedValue]="selectedValue"
-    [displayOnly]="displayOnly"
-  >
+    [displayOnly]="displayOnly">
   </shared-xsd-select>
   <shared-xsd-select-state
     *ngSwitchCase="COMPONENT_TYPES.selectState"
@@ -69,7 +65,6 @@
     [error]="error"
     [index]="index"
     [selectedValue]="selectedValue"
-    [displayOnly]="displayOnly"
-  >
+    [displayOnly]="displayOnly">
   </shared-xsd-select-state>
 </ng-container>
