--- a/angular/projects/shared/src/lib/components/xsd/elements/xsd-element-nillable.component.html
+++ b/angular/projects/shared/src/lib/components/xsd/elements/xsd-element-nillable.component.html
@@ -14,8 +14,7 @@
         [error]="error"
         [index]="index"
         [selectedValue]="selectedValue"
-        [displayOnly]="isDisplayOnly"
-      ></shared-xsd-element-input>
+        [displayOnly]="isDisplayOnly"></shared-xsd-element-input>
     </ng-container>
     <div *ngIf="isNil" class="select-wrapper">
       <select [(ngModel)]="NV" [id]="formName + '-NV'" [name]="formName + '-NV'" class="select-wrapper__select">
@@ -61,8 +60,7 @@
                 [error]="error"
                 [index]="index"
                 [selectedValue]="selectedValue"
-                [displayOnly]="isDisplayOnly"
-              ></shared-xsd-element-input>
+                [displayOnly]="isDisplayOnly"></shared-xsd-element-input>
             </div>
           </ng-container>
         </div>
