--- a/angular/projects/admin/src/app/demographics/custom-configurations-list-demographics.component.html
+++ b/angular/projects/admin/src/app/demographics/custom-configurations-list-demographics.component.html
@@ -9,8 +9,7 @@
   xsd="dCustom_v3.xsd"
   [draftNemsisVersion]="agency.draftVersion?.nemsisVersion"
   draftXsd="dCustom_v3.xsd"
-  [schemaColumns]="sectionColumns"
->
+  [schemaColumns]="sectionColumns">
   <ng-container class="admin-schema-list-header">
     <button (click)="onImport()" class="btn btn--sm btn--secondary ms-3">Import from State Data Set</button>
   </ng-container>
