--- a/angular/projects/admin/src/app/demographics/dashboard-demographics.component.html
+++ b/angular/projects/admin/src/app/demographics/dashboard-demographics.component.html
@@ -36,8 +36,7 @@
         [disabled]="isCreatingNewVersion"
         (click)="onNewVersion()"
         type="button"
-        class="btn btn--primary"
-      >
+        class="btn btn--primary">
         New Version
       </button>
     </div>
