--- a/angular/projects/admin/src/app/demographics/devices-list-demographics.component.html
+++ b/angular/projects/admin/src/app/demographics/devices-list-demographics.component.html
@@ -9,6 +9,5 @@
   xsd="dDevice_v3.xsd"
   [draftNemsisVersion]="agency.draftVersion?.nemsisVersion"
   draftXsd="dDevice_v3.xsd"
-  [schemaColumns]="sectionColumns"
->
+  [schemaColumns]="sectionColumns">
 </shared-xsd-list>
