--- a/angular/projects/admin/src/app/psaps/edit-psap-dispatcher.component.html
+++ b/angular/projects/admin/src/app/psaps/edit-psap-dispatcher.component.html
@@ -8,8 +8,9 @@
         id="user"
         label="User"
         [isPlaintext]="true"
-        [source]="{ user: record.user?.firstName + ' ' + record.user?.lastName + '  &lt;' + record.user?.email + '&gt;' }"
-      ></shared-text-field>
+        [source]="{
+          user: record.user?.firstName + ' ' + record.user?.lastName + '  &lt;' + record.user?.email + '&gt;'
+        }"></shared-text-field>
     </div>
     <div class="mb-3">
       <shared-text-field id="callSign" label="Call Sign" [source]="record" [target]="record" [error]="error"></shared-text-field>
