--- a/angular/projects/admin/src/app/states/nemsis-state.component.html
+++ b/angular/projects/admin/src/app/states/nemsis-state.component.html
@@ -34,20 +34,17 @@
               <ng-container *ngIf="isDataSetInstalled(version); let dataSet"
                 ><shared-loader
                   *ngIf="dataSet.id === isDataSetImporting?.id && isDataSetImporting.status?.code === 202"
-                  class="me-3"
-                ></shared-loader
+                  class="me-3"></shared-loader
               ></ng-container>
               <i
                 *ngIf="!isDataSetImporting && isDataSetInstalled(version); let dataSet"
                 (click)="onDataSetImport(dataSet)"
-                class="fas fa-file-import clickable me-3"
-              ></i>
+                class="fas fa-file-import clickable me-3"></i>
               <i *ngIf="isDataSetInstalled(version)" class="fas fa-check-circle text-success"></i>
               <i
                 *ngIf="!isDataSetInstalled(version) && !isDataSetInstalling"
                 (click)="onDataSetInstall(version)"
-                class="far fa-circle clickable"
-              ></i>
+                class="far fa-circle clickable"></i>
               <shared-loader *ngIf="!isDataSetInstalled(version) && isDataSetInstalling === version"></shared-loader>
             </span>
           </div>
@@ -72,8 +69,7 @@
               *ngIf="!isDataSetImporting"
               (click)="onDataSetImport(dataSet)"
               (click)="onDataSetImport(dataSet)"
-              class="fas fa-file-import clickable"
-            ></i>
+              class="fas fa-file-import clickable"></i>
           </div>
           <div *ngIf="(dataSets.length ?? 0) == 0" class="form-field__item">
             <span>None</span>
@@ -83,8 +79,7 @@
           (onDrop)="onExternalDataSetDrop()"
           (onUploaded)="onExternalDataSetUploaded($event)"
           [multiple]="false"
-          [disabled]="isExternalDataSetInstalling"
-        >
+          [disabled]="isExternalDataSetInstalling">
           <button [disabled]="isExternalDataSetInstalling" type="button" class="btn btn--sm btn--primary me-3">Import Data Set</button>
           <shared-loader *ngIf="isExternalDataSetInstalling"></shared-loader>
         </shared-dropzone>
@@ -99,16 +94,14 @@
           <label>Repository DEM Schematrons</label>
           <div
             *ngFor="let version of repo?.demSchematronVersions"
-            class="form-field__item d-flex justify-content-between align-items-center"
-          >
+            class="form-field__item d-flex justify-content-between align-items-center">
             {{ version | version }}
             <span>
               <i *ngIf="isSchematronInstalled(version)" class="fas fa-check-circle text-success"></i>
               <i
                 *ngIf="!isSchematronInstalled(version) && !isSchematronInstalling"
                 (click)="onSchematronInstall('DEMDataSet', version)"
-                class="far fa-circle clickable"
-              ></i>
+                class="far fa-circle clickable"></i>
               <shared-loader *ngIf="!isSchematronInstalled(version) && isSchematronInstalling === version"></shared-loader>
             </span>
           </div>
@@ -139,8 +132,7 @@
           (onDrop)="onExternalSchematronDrop()"
           (onUploaded)="onExternalSchematronUploaded('DEMDataSet', $event)"
           [multiple]="false"
-          [disabled]="isExternalSchematronInstalling"
-        >
+          [disabled]="isExternalSchematronInstalling">
           <button [disabled]="isExternalSchematronInstalling" type="button" class="btn btn--sm btn--primary me-3">
             Import DEM Schematron
           </button>
@@ -156,16 +148,14 @@
           <label>Repository EMS Schematrons</label>
           <div
             *ngFor="let version of repo?.emsSchematronVersions"
-            class="form-field__item d-flex justify-content-between align-items-center"
-          >
+            class="form-field__item d-flex justify-content-between align-items-center">
             {{ version | version }}
             <span>
               <i *ngIf="isSchematronInstalled(version)" class="fas fa-check-circle text-success"></i>
               <i
                 *ngIf="!isSchematronInstalled(version) && !isSchematronInstalling"
                 (click)="onSchematronInstall('EMSDataSet', version)"
-                class="far fa-circle clickable"
-              ></i>
+                class="far fa-circle clickable"></i>
               <shared-loader *ngIf="!isSchematronInstalled(version) && isSchematronInstalling === version"></shared-loader>
             </span>
           </div>
@@ -196,8 +186,7 @@
           (onDrop)="onExternalSchematronDrop()"
           (onUploaded)="onExternalSchematronUploaded('EMSDataSet', $event)"
           [multiple]="false"
-          [disabled]="isExternalSchematronInstalling"
-        >
+          [disabled]="isExternalSchematronInstalling">
           <button [disabled]="isExternalSchematronInstalling" type="button" class="btn btn--sm btn--primary me-3">
             Import EMS Schematron
           </button>
