--- a/angular/projects/admin/src/app/users/edit-user.component.html
+++ b/angular/projects/admin/src/app/users/edit-user.component.html
@@ -31,8 +31,7 @@
         label="Password"
         [source]="record"
         [target]="record"
-        [error]="error"
-      ></shared-text-field>
+        [error]="error"></shared-text-field>
     </div>
     <div class="mb-3">
       <shared-checkbox id="isAdmin" label="Is Site Admin?" [source]="record" [target]="record" [error]="error"></shared-checkbox>
