--- a/angular/projects/app/src/app/assignments/select-assignment.component.html
+++ b/angular/projects/app/src/app/assignments/select-assignment.component.html
@@ -18,8 +18,7 @@
             [label]="record.number"
             [source]="data"
             [target]="data"
-            (valueChange)="onCheckboxValueChange($event)"
-          ></shared-checkbox>
+            (valueChange)="onCheckboxValueChange($event)"></shared-checkbox>
         </div>
       </ng-template>
     </shared-list>
@@ -30,8 +29,7 @@
           (valueChange)="onInputValueChange($event)"
           label="Other:"
           [source]="data"
-          [target]="data"
-        ></shared-text-field>
+          [target]="data"></shared-text-field>
       </div>
     </div>
   </fieldset>
