--- a/angular/projects/auth/src/app/reset.component.html
+++ b/angular/projects/auth/src/app/reset.component.html
@@ -12,8 +12,7 @@
         placeholder="********"
         [source]="data"
         [target]="data"
-        [error]="error"
-      >
+        [error]="error">
         <ng-template
           ><div class="valid-feedback" *ngIf="success">{{ success.message }}</div></ng-template
         >
