--- a/angular/projects/design/src/app/inputs.component.html
+++ b/angular/projects/design/src/app/inputs.component.html
@@ -12,8 +12,7 @@
             placeholder="Search"
             [searchHandler]="search"
             [isSelectOnly]="true"
-            (valueChange)="$event && addItem($event); $event && arraySearch.onClear()"
-          ></shared-search-field>
+            (valueChange)="$event && addItem($event); $event && arraySearch.onClear()"></shared-search-field>
         </ng-template>
       </shared-array-field>
     </div>
@@ -23,8 +22,7 @@
         label="Array Field (No Clear Buttons)"
         [source]="source"
         [target]="source"
-        [showClearButton]="false"
-      >
+        [showClearButton]="false">
         <ng-template #item let-item="item">{{ item }}</ng-template>
         <ng-template #form let-addItem="addItem">
           <shared-search-field
@@ -33,8 +31,7 @@
             placeholder="Search"
             [searchHandler]="search"
             [isSelectOnly]="true"
-            (valueChange)="$event && addItem($event); $event && arraySearch.onClear()"
-          ></shared-search-field>
+            (valueChange)="$event && addItem($event); $event && arraySearch.onClear()"></shared-search-field>
         </ng-template>
       </shared-array-field>
     </div>
@@ -46,8 +43,7 @@
             #arrayDropdown
             id="array-dropdown"
             (valueChange)="$event && addItem($event); $event && arrayDropdown.onClear()"
-            [target]="{}"
-          >
+            [target]="{}">
             <option value="entry-1">Entry 1</option>
             <option value="entry-2">Entry 2</option>
             <option value="entry-3">Entry 3</option>
@@ -71,8 +67,7 @@
       placeholder="Sample Input"
       [rows]="4"
       [source]="source"
-      [target]="source"
-    ></shared-text-field>
+      [target]="source"></shared-text-field>
   </div>
   <div class="mb-3">
     <shared-text-field
@@ -80,8 +75,7 @@
       label="Disabled Field"
       [isDisabled]="true"
       placeholder="Sample Input"
-      [source]="source"
-    ></shared-text-field>
+      [source]="source"></shared-text-field>
   </div>
   <div class="mb-3">
     <shared-text-field id="readonly" label="Readonly Field" placeholder="Sample Input" [source]="source"></shared-text-field>
@@ -93,8 +87,7 @@
       [error]="error"
       placeholder="Sample Input"
       [source]="source"
-      [target]="source"
-    ></shared-text-field>
+      [target]="source"></shared-text-field>
   </div>
   <div class="mb-3">
     <shared-text-field
@@ -102,8 +95,7 @@
       label="Plaintext Field"
       placeholder="Sample Input"
       [isPlaintext]="true"
-      [source]="source"
-    ></shared-text-field>
+      [source]="source"></shared-text-field>
   </div>
 </section>
 <section>
@@ -117,8 +109,7 @@
       [inline]="true"
       [isDisabled]="true"
       [source]="source"
-      [target]="source"
-    ></shared-checkbox>
+      [target]="source"></shared-checkbox>
   </div>
 </section>
 <section>
@@ -134,8 +125,7 @@
       title="Recording 1"
       [duration]="78"
       fileUrl="https://download.samplelib.com/mp3/sample-15s.mp3"
-      timestamp="2022-04-06T23:38:04+0000"
-    >
+      timestamp="2022-04-06T23:38:04+0000">
       Patient's name is Michael Fantacico age 45 respiratory rate 26 pulse 130 capillary refill to blood pressure 110/80 youngish man
       walking around with torn clothes in a small scrape on the knee seems slightly concussed but is able to communicate, priority delayed.
     </shared-recording-field>
@@ -179,7 +169,6 @@
       placeholder="Search"
       [searchHandler]="search"
       [source]="source"
-      [target]="source"
-    ></shared-search-field>
+      [target]="source"></shared-search-field>
   </div>
 </section>
