--- a/angular/projects/shared/src/lib/components/fields/search-field.component.html
+++ b/angular/projects/shared/src/lib/components/fields/search-field.component.html
@@ -6,8 +6,7 @@
   [class.form-field--invalid]="isInvalid"
   [class.form-field--nonempty]="isNonEmpty"
   [class.form-field--unconfirmed]="isUnconfirmed"
-  (click)="onClick($event)"
->
+  (click)="onClick($event)">
   <label *ngIf="label" [for]="derivedId">{{ label }}</label>
   <ng-template #rt let-r="result" let-t="term">{{ r }}</ng-template>
   <input
@@ -25,11 +24,15 @@
     [inputFormatter]="inputFormatter"
     [resultTemplate]="resultTemplate ?? rt"
     [editable]="!isSelectOnly"
-    [(ngModel)]="value"
-  />
+    [(ngModel)]="value" />
 </div>
 <div class="invalid-feedback" *ngIf="errorMessage as msg">{{ msg }}</div>
 <ng-template
   [ngTemplateOutlet]="template"
-  [ngTemplateOutletContext]="{ isEditing: isEditing, isFocusable: isFocusable, isFocused: isFocused, source: source, target: target }"
-></ng-template>
+  [ngTemplateOutletContext]="{
+    isEditing: isEditing,
+    isFocusable: isFocusable,
+    isFocused: isFocused,
+    source: source,
+    target: target
+  }"></ng-template>
