--- a/angular/projects/shared/src/lib/components/fields/text-field.component.html
+++ b/angular/projects/shared/src/lib/components/fields/text-field.component.html
@@ -8,8 +8,7 @@
   [class.form-field--nonempty]="isNonEmpty"
   [class.form-field--plaintext]="isPlaintext"
   [class.form-field--unconfirmed]="isUnconfirmed"
-  (click)="onClick($event)"
->
+  (click)="onClick($event)">
   <label [for]="derivedId">{{ label }}</label>
   <input
     *ngIf="rows == 1"
@@ -25,8 +24,7 @@
     (blur)="onBlur($event)"
     [shared-debounced]="debounceTime"
     (debouncedValueChange)="this.debouncedValueChange.emit($event)"
-    [(ngModel)]="value"
-  />
+    [(ngModel)]="value" />
   <textarea
     *ngIf="rows > 1"
     #inputEl
@@ -41,11 +39,15 @@
     (blur)="onBlur($event)"
     [shared-debounced]="debounceTime"
     (debouncedValueChange)="this.debouncedValueChange.emit($event)"
-    [(ngModel)]="value"
-  ></textarea>
+    [(ngModel)]="value"></textarea>
 </div>
 <div class="invalid-feedback" *ngIf="errorMessage as msg">{{ msg }}</div>
 <ng-template
   [ngTemplateOutlet]="template"
-  [ngTemplateOutletContext]="{ isEditing: isEditing, isFocusable: isFocusable, isFocused: isFocused, source: source, target: target }"
-></ng-template>
+  [ngTemplateOutletContext]="{
+    isEditing: isEditing,
+    isFocusable: isFocusable,
+    isFocused: isFocused,
+    source: source,
+    target: target
+  }"></ng-template>
