--- a/angular/projects/shared/src/lib/components/xsd/elements/xsd-element-multi.component.html
+++ b/angular/projects/shared/src/lib/components/xsd/elements/xsd-element-multi.component.html
@@ -5,8 +5,7 @@
   <div
     *ngFor="let selectedValue of values; index as i"
     [class.form-field__item]="!isDisplayOnly"
-    [class.form-field__item--invalid]="isInvalidValue(i)"
-  >
+    [class.form-field__item--invalid]="isInvalidValue(i)">
     <shared-xsd-element-nillable
       [xsd]="xsd"
       [record]="record"
@@ -16,8 +15,7 @@
       [error]="error"
       [index]="i"
       [selectedValue]="selectedValue"
-      [displayOnly]="displayOnly"
-    ></shared-xsd-element-nillable>
+      [displayOnly]="displayOnly"></shared-xsd-element-nillable>
     <div [class.feedback]="!isInvalidValue(i)" [class.invalid-feedback]="isInvalidValue(i)">
       <span *ngIf="isInvalidValue(i)">{{ errorMessagesForValue(i).join(' ') }}</span>
     </div>
@@ -34,8 +32,7 @@
     [element]="element"
     [data]="data"
     [error]="error"
-    [displayOnly]="displayOnly"
-  ></shared-xsd-element-nillable>
+    [displayOnly]="displayOnly"></shared-xsd-element-nillable>
 </ng-container>
 <div *ngIf="!isDisplayOnly" [class.feedback]="!isInvalid" [class.invalid-feedback]="isInvalid">
   {{ displayText }}
