--- a/angular/projects/admin/src/app/app.component.html
+++ b/angular/projects/admin/src/app/app.component.html
@@ -51,6 +51,9 @@
       <a routerLink="/clients" routerLinkActive="sidebar__item--active" class="sidebar__item">Clients</a>
     </li>
     <li>
+      <a routerLink="/exports" routerLinkActive="sidebar__item--active" class="sidebar__item">Exports</a>
+    </li>
+    <li>
       <a routerLink="/facilities" routerLinkActive="sidebar__item--active" class="sidebar__item">Facilities</a>
     </li>
     <li>
