--- a/angular/projects/admin/src/app/exports/list-exports.component.html
+++ b/angular/projects/admin/src/app/exports/list-exports.component.html
@@ -1,7 +1,10 @@
 <router-outlet></router-outlet>
 <div [class.d-none]="route.firstChild">
   <div class="d-flex justify-content-between flex-wrap flex-md-nowrap align-items-center pt-3 pb-2 mb-3">
-    <h1 class="h2">Exports</h1>
+    <span class="d-flex">
+      <h1 class="h2">Exports</h1>
+      <a routerLink="/exports/new" class="btn btn--sm btn--secondary ms-3">New Export</a>
+    </span>
   </div>
   <div class="table-responsive">
     <table class="table">
@@ -11,7 +14,7 @@
           <th>Name</th>
         </tr>
       </thead>
-      <shared-list type="exports">
+      <shared-list type="exports" [params]="params">
         <ng-template let-records="records" let-record="record">
           <tr [routerLink]="['/exports', record.id]">
             <td>{{ record.id }}</td>
