--- a/angular/projects/admin/src/app/exports/edit-export.component.html
+++ b/angular/projects/admin/src/app/exports/edit-export.component.html
@@ -1,51 +1,45 @@
 <div class="d-flex justify-content-between flex-wrap flex-md-nowrap align-items-center pt-3 pb-2 mb-3">
   <h1 class="h2">Edit Export</h1>
 </div>
-<shared-form *ngIf="id" type="exports" [id]="id" (delete)="onDelete()" class="d-block col-xl-6">
+<shared-form
+  *ngIf="id"
+  type="exports"
+  [id]="id"
+  [hideButtons]="!isEditing"
+  [showCancel]="true"
+  (cancel)="isEditing = false"
+  (update)="isEditing = false"
+  (delete)="onDelete()"
+  class="d-block col-xl-6">
   <ng-template let-record="record" let-error="error">
-    <div class="mb-3">
-      <shared-text-field id="name" label="Name" [source]="record" [target]="record" [error]="error"></shared-text-field>
-    </div>
-    <div class="mb-3">
-      <shared-select-field id="type" label="Type" [source]="record" [target]="record" [error]="error">
-        <option value="NEMSIS">NEMSIS SOAP</option>
-        <option value="ESO">ESO Partner</option>
-      </shared-select-field>
-    </div>
-    <div class="mb-3">
-      <shared-text-field id="authUrl" label="Auth URL" [source]="record" [target]="record" [error]="error"></shared-text-field>
-    </div>
-    <div class="mb-3">
-      <shared-text-field id="apiUrl" label="API URL" [source]="record" [target]="record" [error]="error"></shared-text-field>
-    </div>
-    <div class="mb-3">
-      <shared-text-field id="username" label="Username" [source]="record" [target]="record" [error]="error"></shared-text-field>
-    </div>
-    <div class="mb-3">
-      <shared-text-field
-        id="password"
-        type="password"
-        label="Password"
-        [source]="record"
-        [target]="record"
-        [error]="error"></shared-text-field>
-    </div>
-    <div class="mb-3">
-      <shared-text-field id="organization" label="Organization" [source]="record" [target]="record" [error]="error"></shared-text-field>
-    </div>
-    <div class="mb-3">
-      <shared-checkbox id="isVisible" label="Is Visible?" [source]="record" [target]="record" [error]="error"></shared-checkbox>
-    </div>
-    <div class="mb-3">
-      <shared-checkbox
-        id="isApprovalReqd"
-        label="Is Approval Required?"
-        [source]="record"
-        [target]="record"
-        [error]="error"></shared-checkbox>
-    </div>
-    <div class="mb-3">
-      <shared-checkbox id="isOverridable" label="Is Overridable?" [source]="record" [target]="record" [error]="error"></shared-checkbox>
-    </div>
+    <ng-container *ngIf="!isEditing">
+      <div class="mb-3">
+        <label>Name</label>
+        <h3>{{ record.name }}</h3>
+      </div>
+      <div *ngIf="record.authUrl" class="mb-3">
+        <label>Auth URL</label>
+        <h3>{{ record.authUrl }}</h3>
+      </div>
+      <div *ngIf="record.apiUrl" class="mb-3">
+        <label>API URL</label>
+        <h3>{{ record.apiUrl }}</h3>
+      </div>
+      <div *ngIf="record.username" class="mb-3">
+        <label>Username</label>
+        <h3>{{ record.username }}</h3>
+      </div>
+      <div *ngIf="record.organization" class="mb-3">
+        <label>Organization</label>
+        <h3>{{ record.organization }}</h3>
+      </div>
+      <div class="mb-3">
+        <button (click)="isEditing = true" class="btn btn--sm btn--primary">Edit</button>
+      </div>
+      <hr />
+    </ng-container>
+    <ng-container *ngIf="isEditing">
+      <admin-exports-form [record]="record" [error]="error"></admin-exports-form>
+    </ng-container>
   </ng-template>
 </shared-form>
